Fix break in loop shortcode tempate + re-add features editing area
Need to be able to edit and remove existing Feature (Quick Close tab)
information.

--- a/includes/css/wp-models.css
+++ b/includes/css/wp-models.css
@@ -165,8 +165,8 @@ div.content-area {
 	border-radius: 0 0 5px 5px;
 }
 
-.archive .model-widget-details h3.model-title,
-.wp-models-shortcode .model-widget-details h3.model-title {
+.archive .model-widget-details h4.model-title,
+.wp-models-shortcode .model-widget-details h4.model-title {
 	padding: 15px 15px 10px;
 	margin: 0;
 	line-height: 1;
@@ -174,13 +174,12 @@ div.content-area {
 	border-bottom: none;
 }
 
-.archive .model-widget-details h3.model-title a,
-.wp-models-shortcode .model-widget-details h3.model-title a {
+.archive .model-widget-details h4.model-title a,
+.wp-models-shortcode .model-widget-details h4.model-title a {
 	padding: 0;
 	margin: 0;
-	color: #666;
+	color: #b50937;
 	background: none;
-	font-size: 18px;
 	text-decoration: none;
 	border: none;
 }
@@ -205,7 +204,7 @@ div.content-area {
 }
 
 .archive .model-widget-details .model-brochure,
-.wp-models-shortcode .model-widget-details .model-brochure, {
+.wp-models-shortcode .model-widget-details .model-brochure {
 	padding: 0 15px;
 	font-size: 11px;
 	line-height: 18px;
@@ -214,7 +213,7 @@ div.content-area {
 }
 
 .archive .model-widget-details .model-brochure p,
-.wp-models-shortcode .model-widget-details .model-brochure p, {
+.wp-models-shortcode .model-widget-details .model-brochure p {
 	padding: 2px 2px;
 	font-size: 11px;
 }
